@@ -2,6 +2,11 @@ lintian (2.5.53) UNRELEASED; urgency=medium
 
   XXX: generate tag summary
 
+  * checks/debhelper.pm:
+    + [CL] Prevent a false positive of
+      missing-build-dependency-for-dh_-command that can be exposed by
+      following the advice for the recently added
+      useless-autoreconf-build-depends tag.  (Closes: #869541)
   * checks/scripts.pm:
     + [CL] Correct false positives in
       unconditional-use-of-dpkg-statoverride by detecting "if !" as a
